1999-05-16  Kaz Sasayama  <Kaz.Sasayama@hypercore.co.jp>

	* Makefile.am (noinst_HEADERS): Change options.h to utils.h.

	* utils.h: Renamed from options.h.  Also change all includes.

	* Makefile.am (dist-snapshot distcheck-snapshot): Add
	distcheck-snapshot.  Modify version numbering for snapshots.

	* options.h (class options_dialog): Remove duplicate members.

	* options.cc (act, quit, handle_delete_event): New functions of
	modal_dialog.
	(create_widget): Do not connect delete_event.
	(act, handle_delete_event): Removed from options_dialog.
	(handle_ok, handle_cancel): Use modal_dialog::quit.

	* options.h (class modal_dialog): New class.
	(class options_dialog): Change the base class to modal_dialog from
	controller.

	* profile.h: Add comments.
	Remove unneccesary struct decl.

	* main.cc (main): Make the profile object file-local.
	(edit_options): Call profile::save.

	* profile.cc (options_changed): Just set changed instead of save.
	(save): Do not save if not changed.
	(restore): Clear changed.
	(open): New function.
	(profile): Remove all arguments.  Initialize changed to false.

	* profile.h (options_callback): Add member: changed.

	* options.cc (add, ~controller, remove_widget): New functions of
	class controller.
	(populate, create_widget): Use controller::func_data.
	(create_widget): Use controller::add.
	(~options_dialog, remove_widget): Removed from class
	options_dialog.
	(handle_ok): Use controller::to_ptr.

	* options.h (class controller): New class.
	(class options_dialog): Derive from controller and remove
	duplicate members.

	* main.cc (edit_options): Use the new interface.

	* options.h (class options_dialog): Update members.
	(class options_dialog): Move create_widget to protected.

	* options.cc (create_widget): Do not set modal.
	(act): New function.
	(~options_dialog): Set sensitive flags to false, too.
	(handle_ok, handle_cancel, handle_delete_event, remove_widget):
	Add `throw ()'.
	(remove_widget): Remove a diagnostic log message.
